# NBTaleBroadPhoneticClasses

./: .gitignore  README.md  Sampa_modifikasjoner_v5.doc  broad_classes.py  pyproject.toml
NTNUmods/: 00Readme.txt  Phonelist_init.lis  labels.list  mlf2nist_all.pl  trans2mlf.pl
broad_classes_converter/: __init__.py  convert.py
